--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
 	"main": "build/index.js",
 	"scripts": {
 		"start": "tsc && node build/index.js",
-    "build": "tsc",
+		"build": "tsc",
 		"dev:watch": "tsc -w",
 		"dev:start": "nodemon",
 		"lint": "eslint src/",
 		"lint:fix": "eslint src/ --fix",
-		"prepare": "husky install && npm install"
+		"prepare": "husky install && npm install",
+		"test": "node tests/index.js"
 	},
 	"repository": {
 		"type": "git",
@@ -29,6 +30,7 @@
 	"homepage": "https://github.com/pungut-in/websocket-main#readme",
 	"devDependencies": {
 		"@types/express": "^4.17.14",
+		"@types/morgan": "^1.9.3",
 		"@types/node": "^18.11.9",
 		"@types/ws": "^8.5.3",
 		"@typescript-eslint/eslint-plugin": "^5.44.0",
@@ -36,11 +38,15 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"husky": "^8.0.2",
-		"prettier": "^2.8.0"
+		"prettier": "^2.8.0",
+		"socket.io-client": "^4.5.4"
 	},
 	"dependencies": {
+		"body-parser": "^1.20.1",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
-		"ws": "^8.11.0"
+		"morgan": "^1.10.0",
+		"redis": "^4.5.1",
+		"socket.io": "^4.5.4"
 	}
 }
